--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: kroyo-di <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/23 19:13:47 by kroyo-di          #+#    #+#              #
-#    Updated: 2024/06/26 19:57:48 by kroyo-di         ###   ########.fr        #
+#    Updated: 2024/07/08 15:53:54 by kroyo-di         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,8 @@ SRCS = ft_memset.c ft_bzero.c ft_strlen.c ft_atoi.c ft_isdigit.c ft_isalpha.c\
        ft_isprint.c ft_isascii.c ft_isalnum.c ft_memchr.c ft_memcpy.c ft_strtrim.c\
        ft_memcmp.c ft_memmove.c ft_strchr.c ft_strdup.c ft_strlcat.c ft_strlcpy.c\
        ft_strncmp.c ft_toupper.c ft_tolower.c ft_strnstr.c ft_strrchr.c ft_calloc.c\
-       ft_substr.c  ft_strjoin.c
+       ft_substr.c  ft_strjoin.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c\
+       ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 INC = libft.h
 OBJS = $(SRCS:.c=.o)
 CFLAGS = -Wall -Werror -Wextra
