--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,13 +6,13 @@
 #    By: kroyo-di <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/15 13:43:43 by kroyo-di          #+#    #+#              #
-#    Updated: 2024/07/29 19:38:17 by kroyo-di         ###   ########.fr        #
+#    Updated: 2024/07/29 20:32:24 by kroyo-di         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 SRCS = ft_printf.c ft_printchar.c ft_printnbr.c ft_printstr.c ft_strlen.c\
-tests.c
+ft_printhex.c ft_printptr.c tests.c
 INC = ft_printf.h
 OBJS = $(SRCS:.c=.o)
 CFLAGS = -Wall -Werror -Wextra
