--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: kroyo-di <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/15 13:43:43 by kroyo-di          #+#    #+#              #
-#    Updated: 2024/08/08 13:56:10 by kroyo-di         ###   ########.fr        #
+#    Updated: 2024/08/12 19:04:42 by kroyo-di         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,21 +15,21 @@ SRCS = ft_printf.c ft_printchar.c ft_printnbr.c ft_printstr.c ft_strlen.c\
 ft_printhex.c ft_printptr.c ft_printunsigned.c
 INC = ft_printf.h
 OBJS = $(SRCS:.c=.o)
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -g -Wall -Werror -Wextra
 
-$(NAME) : $(OBJS) $(INC) Makefile
+$(NAME) : $(OBJS)
 	ar rcs $(NAME) $(OBJS)
 
 all : $(NAME)
 
-%.o : %.c 
+%.o : %.c $(INC) Makefile
 	cc $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(OBJS)
+	rm -f $(OBJS) $(NAME)
 
 re: fclean all
 
